--- a/Resource1.resx
+++ b/Resource1.resx
@@ -126,4 +126,7 @@
   <data name="RefreshSVG" xml:space="preserve">
     <value>&lt;svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"&gt;&lt;title&gt;refresh&lt;/title&gt;&lt;path d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z" /&gt;&lt;/svg&gt;</value>
   </data>
+  <data name="FolderSVG" xml:space="preserve">
+    <value>&lt;svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"&gt;&lt;title&gt;folder-outline&lt;/title&gt;&lt;path d="M20,18H4V8H20M20,6H12L10,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V8C22,6.89 21.1,6 20,6Z" /&gt;&lt;/svg&gt;</value>
+  </data>
 </root>
