--- a/SettingForm.resx
+++ b/SettingForm.resx
@@ -117,4 +117,101 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="PageHeader1.Icon" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAFSVJREFUeF7tnX+IXNXdxiUsYQlBgoQSJBQJIlIklBJERIKIOGdOzfBSXooU/xAp
+        RYrISylFpAgSpIhIkSJFpEgpEoqT9g2+kjdvkWCmNg2S+qbrzk64R9Nwb9570iWE4JveE5Yl5cxM0p3v
+        Pbs79879nntm9vnAB//ImnM25nncuff8uOMOAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAABgXVrtzrZWuzPnyW10/GlE9rrbZK+725tL3bmR8RN1RzOO7pKJ2s3p
+        cIyZ+G8WMiJLtwmj50Sm54TR29dx5+amu4TRu8d0l8j0NlsAZ1rtzg1Pfka/+WlE9roHZK9706M/Ghk/
+        Ubtkom568vm1Y4NqsSEURv9eGH1DGL0qjL7p0cO2AOJWu3PTk1/QP4BppIYCeH1k/ERtk4m67ghr9cbq
+        V2vHBtUhjLa+6ggmv1ka2Z8CUAAlqKEAfpGbQ6LO5MLK40z81BYiwuinavi/vvWaMPob/UmgAIoTSAG8
+        6ggrhzdkou6k44PJEEYfEEZfd4ST29WG0d+5PREUQHECKYCHZBLRsHL5OB0flEcYfbcwOnaE04evjEwG
+        BVCcQApgTsbRsiOsHB6m44NyCKN3CKPPOILpw2PC6NG3OiiA4oRQABaZqCOOsDIYnaRjg+II03/d91tH
+        MPnN9KIwOv9RDgVQnGAKII6eyYeVRfvGYZ6OD8bHPvFvZOnhXDD9eEUYfR+dU59Wu3PZEVQuUQDldBdA
+        ovbKJFp1BJbDR+j4YHyE0U87gunDFWHSJ+h8boMCKE4oBWCRsVp0hJXDF+nYYDyE0QeF0ZkjnD4cWUSW
+        AwVQnKAKIFFvOsLK4XE6NtgcYfT9Ikvtj+A0mD58V2SaTmkUFEBxAiuAliOsHF6VidpOxwfrI4z+mjDa
+        rrijwfTh6YZJN39ugwIoTlgFEO2ScX+xDg0shwfo+MDN4HVfetoRTH6z1K4xuJvOyQkKoDghFYBFJuq0
+        I6wcbvx5EvSx79qF0UdzwfRgw6R2deH4RY0CKE6ABeBnWXCsjtGxwSiNwQafN2kwPfoUndOGoACKE2AB
+        PJYLK4v9lYcjZxOAUYTRLzhC6ctXbQEVAgVQnAALYIdMVJYPLIv76fhggDDpv9W0u89qzxQofngLCqA4
+        oRWARcbqpCOsHOKAEAfC6Idq2t1nH/qdsycC0TmNBQqgOEEWQKJedoS1euPofTr2VkcYvU9k6eVcMP1o
+        x72HzmlsUADFCbQADubCymOKcwL/hTD6LmH0kiOYPrSrCydbot1qdy45gsolCqCc4xTAfDNRXzkCW71x
+        NDhNZosjTDovsvRjRzB9+SydU2GwG7A4IRaARSbqo1xYeXyOjr3VsA/cGln6niOUvnxj02W+44ACKE7A
+        BfBTR1g5PELH3koMD/P8mSOUvvzAHiNO51UKFEBxQi2AZqIecYSVw0sy3rrPAYTR33eE0pcLzoM9yoIC
+        KE6oBSCTaF76eg6QKPcBEzOOMFoM9tjngunDyZ74u0ABFCfUArA0Y2/PAb5Px551hNHfHB6pTYPpw0xk
+        6cN0ThODAihOyAXg8TnAe3TsWUYYvbfGk3ztmX5P0zlVAgqgODUUwFt0DuvhcT1AvFXWA4hM3ykybVfb
+        5YPpR3t7EJ1WNaAAilNDAbxN57AeMo7mZRyxXxvWtHcSxLP/HGB4MedxRyj9mOn37eWhdF6VgQIoTsgF
+        YJGJt30BM/0cQGTpHQ2TvpMLpT/PiEzvoPOqFBRAcaagAF5xhJXDmX4OIIx+yRFKX14c+1SfSUABFCf8
+        AogedYSVweiSTBQdfiYQRn+vxq29X9k3DnROLKAAihN6ATSTyJ4P4Oc5wAyuBxCZPiiytKZjvNMVkaUt
+        Oic2UADFCb0ALHgOUA57jHfD1HaMt93b7/fcRRRAcaajACI/5wPM0HMAYVJ7jPcXuVD6MtNvs73uWw8U
+        QHGmowC8rQe4JJOIDj91DG/trecY74F/aBjt/94FFEBxpqQA5mXCvx5gYHQ/HX+aEJk9xjut5Rjvofbm
+        3l10Xl5otTsXHUHlEgVQzsIFYPF4PsAP6NjTwnBr788dofTlsjD6Xjovb7TancgRVC5RAOUsWwAvOcLK
+        YDS15wMIkz4vTEpD6cvJj/SaFBRAcaamAGL1cD6sLNpzAunwwWNft9W1tbdhUrvGgGeDTxFQAMWZogLY
+        7u2cwERN1TmBwugHazvGe+BhYVI6Lf+gAIozLQVgaSbquCOsHP6Qjh0q/WO8jU4dofTlkVKXeHDgswAO
+        9R84nqLjb2u1T8212p35Vruz89CxT+6Un3++S/a6d65xp1xa3DFir7tdLi3OjdjrjvzeXMje4oOOkHJa
+        ugBkon7sCCuHU3FfgMhSe4y3fepOQ+lL+6qRd4NPEVrvdy7QoHJ6qH0qHdxFcOpKq935qtXuXD/U7mSt
+        dudGq91ZOfS7P67KpcVV2euudcXhDbm0mI3Y615vLi3eVva6X8le98pam73usux10xGXuhdlr3thxKXu
+        eeKS7HXPDbVfT0PK6SQFcMARVg4vh34+gDB6Xhh90hFKX14QRu+h86oVz+sANvVQu3NTLi3SAGx1JymA
+        OZmoq47AcvgAHT8UhEntld2/cYTSj1lqjxIL788ntAKwysXPaQC2uqULwCITdcwRVg6DvDewv68/Sw/n
+        QunPlYZJBZ1XEARZAAsLNABb3ckKII5ecISVwegoHTsE7A06tW3tzfr/DPcBaZAFcA4FQJysAJJofz6s
+        LC6H9hxAGP2EMPpGLpj+fNP7Bp8iBFkA//tXGoCt7oQFoLYNw0kDW72x8nOQxRgIo/cPP3vTUPqyuht8
+        uPB8O/BYys9QAMSJCsBiX9Plwsrjf9Cx66D2Y7yN/qzSG3y4CLIA/nKOBmCrW0UBPOcIK4fH6Ni+scET
+        ptZjvC8Jo79O5xUkQRbAWRQAsYoCuM8RVg6vNuOoth97B8d4pyccofSlXV58gM4rWIIsAPwEQK2iAKz2
+        Mg8a2OqNVS0BaGT9d/3vOkLpS/um4Tt0XkHTaneWaQDrFs8Ack5cABaZqN/kwsrjT+jY3Az39b9c49Ze
+        qz1GnE4tbFrtzjUawLpFAeSsqgCecYSVw+N0bG5qfdfft/+xI6hXoGMRZAHgNSC1qgK4xxFWDq/JRHk7
+        3y6Ad/32c3+113b7IsgC+CsWAhErKoDIlkDkCCyH1V9l7aDmK7tveYLOa2oIsgAWsBeAWEkBWGQcveMI
+        a/XG6iU6dtXYV23DV240kL61pwo9Tuc3FQRZAIvYDUissADUU7mwchirj+jYVSKMtvv6FxxhrMtlkdV4
+        uGdZhnvycyGsS2wHdlpdASRqj0zUai6w1WuPJJ+n41dBAPv619MWUvir/9bSGhzGkQtiXR763R9RAHkr
+        KwCLTNSCI7AcPkrHnhT7pH14pBYNXyh+GPz6/7UEVwD/+QkKIG/VBfCmI6yV24yjw3TsSRi+63/dEbqg
+        bJj0jalZDxBcAfzXn+hfflh9AbRoWJns0LEnQRj9vMhqXegzvpmejktTQyuAJ0/8mf7lh9UXwF0yUSuO
+        wFZrrG7IJKrkM7Ew/TP8a1zoU8yGSe26hMo/AlVOcAVw8lP6lx9WXAAWGatPc4HlceKjsAI4w7+s9V77
+        NQ6hFcC3//QX+pcfchRAol5zhJXD1+nYRRAm3SdMWucZ/pO61MjSei7+HIeQCqD/ChD7AFxyFMATjrBW
+        b6zO0rHHpTE4w3/JEarpMtN2n0CYbwYOtTsrNIh1eej3eAW4jtUXQKx2ykRlucBWr33WsJuOvxkiS7cH
+        +q6/rL8I8s0ADWGdPvk/Z+hffDiw8gKwyCT62BFYDgvtkR+8609/7QjRtPsc/V5rh4awTr995jP6Fx8O
+        ZCoA9bIjrBy+RcdeD3th5mBffy48s6B9M/AY/Z5rhYawLvs//nfx4/868hRArB5xhJXDpXGvD7dXZk/T
+        674SXgnqzQANIqvvd6622p2HWu3OgVa7s7/V7nyj1e7c12p37nnyv/98r1xY2Cd73bunwKccIeWUpwAS
+        NT/cu08DW7V278FeOj5FZOnBhtGZIzSzpr2cNIw3A7mQ8hrT8acR2es+4ggppywFYJFJ5Ov68Kfp2GuR
+        idrfTL+8Kv4xJSv9JjYNY8+AI6ScogDKyVgAnq4Pj9Wv6di3kHG0TybRJft1zcsX7EWajsDMpPXvGXCE
+        lFMUQDk5C+BbubDyGMskyp2ZN9yePHJKUfPKRRoUHrP+s4ZXhpd45H/di+kz9M/EK46QcooCKCdnAcw1
+        k4j/2rC4/8/7R8aOo10yUefo1zYTdVP8/yVHWCp19Vb4RJbuEUZ/4fgafrP+M49H1v65eMURUk5npQAe
+        dISUU7YCsMhEHaUhZDFWt2/JlYnaIRP1Se5rhjb//rd8WKr1Z2t//BYmvW/4hJ5+nQ/tUud6bhJyhJTT
+        WSmAA46QcspdAD+kAWQxjo4Mx9tujw7P/foa+z8FMD0QbNhDO7L8Ed52916jvtOF7ceQnXRO7DhCyikK
+        oJzcBXA/DSCT9iSibc1YHXH8Wk5xLaYhmdxMn9/oFZww+ge5f8ef73u/W8ARUk5RAOXkLgB7fTj/tWH2
+        fIAxw29leBh4VRg98hyCMjh1KH3T8e/68mU6J1YcIeUUBVBO1gKweLw2bGybf79AwzGJKyLTkn7fLuz7
+        eWH0ccfv4UO/9ws6QsopCqCcPgrA17VhY9vUX9JwTOKP6fe8EfZjQo1bkb+yF57QObHgCCmnKIBy8hdA
+        rL5OA1i3zfQLGoyy/qrMghuRpfcKk9pTfejv58MLwuiv0TlVjiOknKIAyslfAP3rw6PzNIR12vy/Sgrg
+        I5Hp0vcU2t17Nd47+LEwaem5j4UjpJzOSgF8yxFSTtkLwCLj6Jc0hHXavKRoIIpqf4S/i36fRbH7+B2/
+        txcbJn3bbpFmwxFSTmelAPY7QsqpnwJI1L/TENZpfy2AIxRjmVV3IGf/zUCma3wzkN5eQFU5jpByigIo
+        p6cCiHZ7ujZsLPsFUG5jUCaytNLltcKk9s2APduPjsVvlt4QGdMR446QcooCKKenArDPAdRZGsS6LFsA
+        jSzdcOtxWRqZ3iWytKY3A+lyw6T76JwmxhFSTlEA5fRSABZ7jDcNYl2WLIDDZZ74j4v9WDH8eEHH9eG5
+        ypcLO0LKKQqgnP4KII4EDWJdliiAI641/lVj9wzU+GbgaKXLhR0h5RQFUE5/BZConc3+lV75QPq24Iag
+        0yLTO+j3w0V9ewb6fx7VLRd2hJRTFEA5vRWARcbK13HhG1qgAOyimT30++BkeFPxzx1z4TdLq1su7Agp
+        pyiAcvotgET9lIaxDsf8CHBNGP0A/R580N8zkKV17Rmwy4X30zkVxhFSTlEA5fRdAA/TMNbhGAWwIsx4
+        G3y4GO4ZsKf80rn50J5iVPjWpREcIeUUBVBOrwXQjKM5T8eFb+gYBfACnXsdCKP3DW8CpvPz4R8mOl3Y
+        EVJOZ6UAZm4vAEXG6hgNpG83KYC3OF/3FaXeNwP98wvolMbDEVJOUQDl9F8ASfQ8DaRvNyiAIG/bFSZ9
+        1jFXT5Y8XdgRUk5RAOX0XgDNOLpfJlEulD517gXI0qVGlq57pFedDN8M2LP+8/Pm154u/BCd06Y4Qsop
+        CqCc3gtguCyY/5iwDcztBszSZZFVs8GHi8GbAf2BI6A+vCSMvpvOaUMcIeUUBVBO7wVgkXH0Lg2lT0fO
+        A8j6n68P0jmGiMjSO4XRC46A+vB0w6TzdE7r4ggppyiActZTAIn6Hg2lT8mJQM/S+YXM8M3AZUdAffju
+        2A8FHSHlFAVQzroKYE8zrm978JozAV8f+y90QNgbf4afzWlAfTjeK1JHSDmdlQJ4yBFSTmspAIuM1Wc0
+        mL7sXxRq9Ac+NvhwIYx+RmS5cPrQLpJ6jM4nhyOknM5KAczM3YCbIZOotu3BTf3lRXEtCfqh32bY47yE
+        0a85AurDZbHZGQKOkHKKAihnjQWgHqfB9GOUykTdQ+czjdjtu8KkxxwBZbdh0nONjc4QcISUUxRAOess
+        gB0yia7nA8rqdRmr4u+0A8Ye5DE80CMXUg/+dt0zBBwh5XRWCuCgI6Sc1lYAFpmoE46QcmkfOn6XzmEW
+        sDcAiyy1NwHTgPKbpS/S+fRxhJTTWSmAxxwh5bTuAviRI6g8xuondPxZomH0wzW9GbAPBQWdjy2AVUdQ
+        uUQBlLPuAnggF1Qef9lMFB1+5hBGPy1M/1APGlJulxtZOvpcpdXuZI6gcokCKGfdBbBNxuzLgj+QiQpu
+        gw8Xw8NLaUB9eFYY/a+VgiiA4silxUcdIeW01gKwMC8LPi3jaP0n1TPI4M2Afs8RUB++08iGtw2hAIoj
+        e92HHSHlNIQC+K4juFW4JBM12ak2U4r9P7Ew+qQjoD4cbB9GARRH9rrfdISU0wAKQNlbg1YcAZ7AyIZ/
+        Lx1rK2G3Ntf0evC6yPR+WwCvtdqdI61252ir3TnWanc+bLVPnWi1Ox+12qc6rXbHeqbV7nzaanfOttqd
+        hTWeL+iH9A9gGpG97t5hMFdlr3ujoCuOgG/kquwtvkHnUAcyUe827dLgWC3IRJ2XsfpCJuriULtw55aX
+        ZaKuEJf7vxartJlEnzaT6EW7xoCOsRURWbq3f6y50ReH2leFVnvM2JWh9vBTexCo9frw9KFb2if8NOCb
+        2sjSRToXMAayt2hLYE4udef6/yzkov33to/Y687LXnfnGnfJXne37HXvGv6aexFHoDTjaPDgcFT6ZWAT
+        hgeM2GcFLu1dhX0bg3sLtxPtwqM19rco7x7R4z0KAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAACmkX8C27S9COcZEAkAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
