--- a/Resource1.resx
+++ b/Resource1.resx
@@ -129,4 +129,8 @@
   <data name="FolderSVG" xml:space="preserve">
     <value>&lt;svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"&gt;&lt;title&gt;folder-outline&lt;/title&gt;&lt;path d="M20,18H4V8H20M20,6H12L10,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V8C22,6.89 21.1,6 20,6Z" /&gt;&lt;/svg&gt;</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="WinterBox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\WinterBox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
